﻿2006-12-28 Ali Ghorashi
	* Added Templates Support
	* Added Toolbar menus for compiling
	* Fixed 1613455
2006-12-19  Øyvind Harboe
	* The project now does not need to be named "veditor" to compile.
2006-12-12 Ghorashi-A
	* Fixed a problem with "end architecture" in vhdl parser
	* Fixed a builder bug that looked at "/" as the current directry
	* Fixed compile action so that all the files are saved before compiling if 
	  the "Save Automatically Before Build" option is checked. 
	* Moved Compile Action to build menu
	* Added Block Command and Block Uncomment
2006-12-10  tadashi-k
	* fixed bugs about error parser and simulation
2006-09-10  tadashi-k
	* add Export-Package in MANIFEST.MF for test
2006-08-27  tadashi-k
	* add a new contributor to CONTRIBUTORS.txt
2006-08-26  tadashi-k
	* refactored ParserCore.jj and other files.
	* implemented TextHover with declaration lines
2006-08-17  tadashi-k
	* fixed bugs: 1488462, 1519826, 1519835, 1537960
2006-08-16  tadashi-k
	* fixed bugs: 1529153, 1538377
	* fixed bugs: ExtenalLauncher show error if launch in non-exist directory
2006-08-14  Øyvind Harboe
	* renamed ChangeLog to ChangeLog.txt & CONTRIBUTORS to CONTRIBUTORS.txt that allows
	  BOM & UTF-8 encoding to be used.
	、私は3つのビールを食べるように! 
2006-08-12  tadashi-k
	* Changed license from GPL to EPL
2006-08-11 Øyvind Harboe	
	* Added CONTRIBUTORS file
2006-05-30 Øyvind Harboe	
	* added ChangeLog
	* bumped version number for plugin to 0.4.2
	* Fixed NPE in ctrl-space for VHDL files. 
	* renamed build.xml to buildjavacc.xml. The original build.xml file
	  is used to generate .java from .jj files. The "build.xml" name
	  is used by standard Eclipse naming w.r.t. build files for exporting
	  the plugin
	* added standard Eclipse plugin.xlm, which produces an emphemeral build.xml 
	  which allows exporting veditor as a plugin