@@ -1,6 +1,0 @@
-package net.sourceforge.veditor.template;
-
-public class VerilogContextType extends HdlContextType{
-	/** This context's id */
-	public static final String CONTEXT_TYPE= "net.sourceforge.veditor.verilog"; 
-}
