@@ -1,0 +1,6 @@
+package net.sourceforge.veditor.template;
+
+public class VerilogInModuleContextType extends HdlContextType{
+	/** This context's id */
+	public static final String CONTEXT_TYPE= "net.sourceforge.veditor.verilogInModule"; 
+}
