@@ -1,4 +1,7 @@
-﻿2006-12-28 Ali Ghorashi
+﻿2007-01-06 tadashi-k
+	* Added Verilog context types and templates
+	* Fixed a problem of VHDL "inModule" template
+2006-12-28 Ali Ghorashi
 	* Added Templates Support
 	* Added Toolbar menus for compiling
 	* Fixed 1613455
